[package]
name = "atomic-cuckoo-filter"
version = "0.2.0"
edition = "2024"
description = "Highly concurrent Cuckoo Filter"
license = "MIT"
repository = "https://github.com/farhadi/atomic-cuckoo-filter"
readme = "README.md"

[dependencies]
derive_builder = "0.20"
parking_lot_core = "0.9"
rand = "0.9"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
ahash = "0.8"
cuckoofilter = "0.5"
serde_json = "1.0"
